# GameEnter

./: .gitignore  CHANGE_COVER_GUIDE.md  CMakeLists.txt  CPU_100_PERCENT_COMPLETE.md  CPU_COMPLETE.md  CPU_MILESTONE.md  EMULATOR_WORKING.md  FINAL_SESSION_SUMMARY.md  GRAY_SCREEN_FIX.md  ILLEGAL_OPCODES_PROGRESS.md  KE_HOACH_DU_AN_NES_EMULATOR.md  MAPPER1_COMPLETE.md  NES_EMULATOR_PROJECT_PLAN.md  PPU_100_PERCENT_COMPLETE.md  PPU_98_PERCENT_COMPLETE.md  PPU_ATTRIBUTE_GLITCH_ISSUE.md  PPU_PHASE_COMPLETE.md  PPU_TEST_RESULTS.md  PROGRESS_SUMMARY.md  QUICKSTART.md  README.md  SAVE_STATE_EXPERIMENT.md  SESSION_SUMMARY.md  SETUP_COMPILER.md  SLOT_SAVE_GUIDE.md  WHY_95_PERCENT_PPU.md  build.ps1  build_log.txt  compare_cpu.ps1  compare_logs.ps1  config.ini  debug_donkeykong.ps1  fix_unicode.ps1  frame_01.ppm  frame_03.ppm  frame_04.ppm  frame_05.ppm  frame_49.ppm  monitor_ppumask.ps1  multiplayer-roadmap.md  (+14 more)
.agent/: DUO_MULTIPLAYER_COMPLETE.md  DUO_MULTIPLAYER_FINAL_SUMMARY.md  DUO_MULTIPLAYER_PROGRESS.md  FINAL_TEST_INSTRUCTIONS.md  PHASE_3_COMPLETE.md  TEST_GUIDE.md
.agent/workflows/: duo-multiplayer-implementation.md  multiplayer-roadmap.md
core/: emulator.cpp  emulator.h
core/apu/: apu.cpp  apu.h
core/cartridge/: cartridge.cpp  cartridge.h
core/config/: config_manager.cpp  config_manager.h
core/cpu/: cpu.cpp  cpu.h  opcodes.cpp
core/input/: input.cpp  input.h
core/mappers/: mapper.h  mapper0.cpp  mapper0.h  mapper1.cpp  mapper1.h  mapper2.cpp  mapper2.h  mapper3.cpp  mapper3.h  mapper4.cpp  mapper4.h  mapper7.cpp  mapper7.h
core/memory/: memory.cpp  memory.h
core/network/: network_discovery.cpp  network_discovery.h  network_manager.cpp  network_manager.h
core/ppu/: ppu.cpp  ppu.h
desktop/: auto_start_diagnostic.cpp  chr_check.cpp  chr_diagnostic.cpp  chr_tile_check.cpp  cpu_exec_test.cpp  cpu_trace_gen.cpp  deep_ppu_debug.cpp  disassembler.cpp  disassembler.h  extended_render_test.cpp  force_ppumask_test.cpp  force_render_test.cpp  framebuffer_test.cpp  full_diagnostic.cpp  game_test.cpp  live_render_monitor.cpp  main.cpp  main_sdl.cpp  manual_nametable_test.cpp  minimal_render_test.cpp  nametable_content_check.cpp  nametable_dump.cpp  nestest_check.cpp  palette_test.cpp  ppu_debug.cpp  ppu_deep_diagnostic.cpp  ppu_diagnostic.cpp  ppu_register_spy.cpp  ppu_render_diagnostic.cpp  ppu_test.cpp  ppumask_monitor.cpp  quick_graphics_check.cpp  shift_register_test.cpp  slot_manager.h  stb_truetype.h  test_ppumask.cpp
desktop/systems/: AppPath.h  FontSystem.h  HomeScene.h  LobbyScene.h  ReplaySystem.h  Scene.h  SettingsScene.h  Slot.h  UISystem.h
docs/: BUILD_INSTRUCTIONS.md  CHANGE_COVER_GUIDE.md  COMPLETION_SUMMARY.md  CPU_95_PERCENT_ANALYSIS.md  CPU_INFINITE_LOOP_FIX.md  DOCUMENTATION_INDEX.md  FINAL_DIAGNOSIS.md  GAME_ROM_TEST.md  INPUT_COMPLETE.md  PPU_99_PERCENT_COMPLETE.md  PPU_COMPLETE.md  PPU_FINAL_SUCCESS.md  PPU_IMPLEMENTATION.md  PPU_IMPLEMENTATION_PLAN.md  PPU_SESSION_COMPLETE.md  PPU_SUCCESS.md  REMAINING_2_PERCENT_PPU.md  SESSION_2025_12_25.md  TIEN_DO_TUAN_1.md  TONG_KET_IMPLEMENTATION.md  TROUBLESHOOTING_DONKEYKONG.md  features_design.md
saves/: replay_Contra_(USA)_nes_20251228_155804.rpl
tests/: ROM_RECOVERY.md
tests/test_roms/: game_slots.txt
